[gd_scene load_steps=9 format=3 uid="uid://8jtwyqt32b2j"]

[ext_resource type="Texture2D" uid="uid://usdv7rs20v4m" path="res://Sprites/Menu/mainscreen.png" id="1_bqmud"]
[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="2_g5clh"]
[ext_resource type="Texture2D" uid="uid://dxacmkj4ois4b" path="res://Sprites/Menu/PLAYDULL.png" id="3_nb3aj"]
[ext_resource type="Texture2D" uid="uid://br0xwhhq3s26a" path="res://Sprites/Menu/play.png" id="4_cd8ka"]
[ext_resource type="Texture2D" uid="uid://n1m82hdavfxy" path="res://Sprites/Menu/helpdull.png" id="5_7btfc"]
[ext_resource type="Texture2D" uid="uid://c2huowqd7eica" path="res://Sprites/Menu/help.png" id="5_cogvk"]
[ext_resource type="Texture2D" uid="uid://dgoy86ol2uhmv" path="res://Sprites/Menu/xsalir.png" id="6_2ulku"]
[ext_resource type="Texture2D" uid="uid://cpo72ems4e55x" path="res://Sprites/Menu/xdull.png" id="7_cot3r"]

[node name="MainMenu" type="TextureRect"]
texture_filter = 1
scale = Vector2(6.00002, 6.00002)
texture = ExtResource("1_bqmud")
script = ExtResource("2_g5clh")

[node name="Start" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 118.833
offset_top = 26.4999
offset_right = 196.833
offset_bottom = 56.4999
texture_normal = ExtResource("3_nb3aj")
texture_hover = ExtResource("4_cd8ka")

[node name="Help" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 106.5
offset_top = 46.8332
offset_right = 167.5
offset_bottom = 85.8332
texture_normal = ExtResource("5_7btfc")
texture_hover = ExtResource("5_cogvk")

[node name="Quit" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 173.0
offset_right = 192.0
offset_bottom = 18.0
texture_normal = ExtResource("7_cot3r")
texture_hover = ExtResource("6_2ulku")

[connection signal="button_down" from="Start" to="." method="_on_start_button_down"]
[connection signal="button_down" from="Help" to="." method="_on_help_button_down"]
[connection signal="button_up" from="Quit" to="." method="_on_quit_button_up"]
